# skob-ha

./: CHANGELOG.md  README.md  TODO.md  hacs.json
custom_components/boks/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  protocol.py  secret.py  sensor.py  strings.json  switch.py
custom_components/boks/translations/: en.json  fr.json
docs/: firmware.md  hardware.md
docs/fr/: README.md  TODO.md  firmware.md  hardware.md
firmware/nimble-ble-proxy/: .gitignore  CMakeLists.txt  FINDINGS.md  NOTICE.md  README-DETAIL.md  README-FR.md  README.md  netcheck.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.bletest  sdkconfig.defaults.esp32
firmware/nimble-ble-proxy/.github/: build-no-ble.defaults
firmware/nimble-ble-proxy/.github/workflows/: build.yml
firmware/nimble-ble-proxy/components/api_proto/: CMakeLists.txt  api_proto.h  api_subset.options  api_subset.proto  generate.sh
firmware/nimble-ble-proxy/components/api_server/: CMakeLists.txt  api_server.cpp  api_server.h  bt_handlers.cpp  bt_handlers.h  frame_codec.cpp  frame_codec.h  handshake.cpp  handshake.h  idf_component.yml  stats.cpp  stats.h
firmware/nimble-ble-proxy/components/ble_backend/: CMakeLists.txt  address.cpp  address.h  ble_backend.cpp  ble_backend.h  bthome.cpp  bthome.h  connection.cpp  connection.h  gatt_discovery.cpp  gatt_discovery.h  idf_component.yml  publish.cpp  publish.h  scanner.cpp  scanner.h
firmware/nimble-ble-proxy/components/ble_clone/: CMakeLists.txt  clone.cpp  clone.h  clone_config.cpp  clone_config.h  clone_mirror.cpp  clone_mirror.h  clone_upstream.cpp  clone_upstream.h  idf_component.yml
firmware/nimble-ble-proxy/components/ble_httpd/: CMakeLists.txt  ble_httpd.cpp  ble_httpd.h  idf_component.yml
firmware/nimble-ble-proxy/components/dhcps_hostname/: CMakeLists.txt  dhcps_hostname.c
firmware/nimble-ble-proxy/components/dhcps_hostname/include/: dhcps_hostname.h  nbp_lwip_hooks.h
firmware/nimble-ble-proxy/components/liveness_wdt/: CMakeLists.txt  liveness_wdt.cpp  liveness_wdt.h
firmware/nimble-ble-proxy/components/mdns_announce/: CMakeLists.txt  idf_component.yml  mdns_announce.cpp  mdns_announce.h
firmware/nimble-ble-proxy/components/nat_router/: CMakeLists.txt  nat_router.cpp  nat_router.h
firmware/nimble-ble-proxy/components/ota/: CMakeLists.txt  ota.cpp  ota.h
firmware/nimble-ble-proxy/components/wifi_sta/: CMakeLists.txt  wifi_sta.cpp  wifi_sta.h
firmware/nimble-ble-proxy/components/ws_proxy/: CMakeLists.txt  idf_component.yml  ws_proxy.cpp  ws_proxy.h
firmware/nimble-ble-proxy/docs/: ant.md  clone.md  plan-liveness-watchdog.md  thermal-notes.md  todo.md  vibe.md  web-ui.md
firmware/nimble-ble-proxy/include/: proxy_config.h  wifi_creds.h.example
firmware/nimble-ble-proxy/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
firmware/nimble-ble-proxy/scripts/: ble_dashboard_probe.py  serlog.py  test_proxy_connect.py  test_settings.py
firmware/nimble-ble-proxy/scripts/ant-probe/: .gitignore  COMPARISON.md  ant-probe.yaml  bleak_fugu.py  boot_switch.h  capture_esphome.py  capture_notify_probe.py  capture_proxy.py  partitions.csv
firmware/nimble-ble-proxy/web/: index.html
